tuner section outline

--- a/index.html
+++ b/index.html
@@ -18,18 +18,25 @@
       <label for="input-db-value">INPUT</label>
       <span id="input-db-value"></span>
     </div>
-
+    
     <!-- global settings and amp -->
     <div class="global-container" id="global-container">
-        <div class="amp-container" id="amp-container"></div>
-        <div class="power-container" id="power-container">
-            <div class="custom-select">
-            <label for="amp-type">Select Amp:</label>
-            <select id="amp-type">
-            <option value="" selected>Select Amp:</option>
-        </select>
-        </div>
-            </div>
+    <!-- tuner -->
+    <div class="tuner-container">
+      <div class="tuner" id="tuner"></div>
+      <label for="tuner-value">TUNER</label>
+      <span id="tuner-value"></span>
+    </div>
+
+    <div class="amp-container" id="amp-container"></div>
+      <div class="power-container" id="power-container">
+          <div class="custom-select">
+          <label for="amp-type">Select Amp:</label>
+          <select id="amp-type">
+          <option value="" selected>Select Amp:</option>
+      </select>
+      </div>
+      </div>
     </div>
 
     <!-- output meter -->
