--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./assets/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.40/Tone.js"></script>
+    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
     <title>FX Chain with Tuner</title>
 </head>
 <body>
@@ -23,7 +24,9 @@
     <div class="global-container" id="global-container">
     <!-- tuner -->
     <div class="tuner-container">
-      <div class="tuner" id="tuner"></div>
+      <div class="tuner" id="tuner">
+        <div class="tuner-needle" id="tuner-needle"></div>
+      </div>
       <label for="tuner-value">TUNER</label>
       <span id="tuner-value"></span>
     </div>
